# HIMS-Software

./: AGENTS.md  CMakeLists.txt  README.md
HIMS-Scan-R1-Firmware/: platformio.ini
HIMS-Scan-R1-Firmware/boards/: tenstar_esp32s3_zero.json
HIMS-Scan-R1-Firmware/include/: HimsScanCore.h  HimsScanOutbox.h
HIMS-Scan-R1-Firmware/src/: main.cpp
HIMS-Scan-R1-Firmware/src/app/: hims_scan_app.cpp  hims_scan_app.h
HIMS-Scan-R1-Firmware/src/config/: config.example.h  pins.h
HIMS-Scan-R1-Firmware/src/gm65/: gm65_scanner.cpp  gm65_scanner.h
HIMS-Scan-R1-Firmware/src/keypad/: keypad.cpp  keypad.h
HIMS-Scan-R1-Firmware/src/net/: hims_client.cpp  hims_client.h
HIMS-Scan-R1-Firmware/src/storage/: outbox_store.cpp  outbox_store.h
HIMS-Scan-R1-Firmware/test/: test_hims_scan_core.cpp
HIMS-Software/: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  README.md  run.ps1
HIMS-Software/data/: activity.tsv  inventory.tsv
HIMS-Software/src/: App.h  app.cpp  main.cpp
HIMS-Software/src/app/: AppActions.cpp
HIMS-Software/src/core/: HimsScanProtocol.cpp  HimsScanProtocol.h  Inventory.cpp  Inventory.h  InventoryHelpers.cpp  InventoryHistory.cpp  InventoryInternals.h  InventorySerialization.cpp  InventoryStorage.cpp
HIMS-Software/src/import/: DigiKeyCsvImport.h
HIMS-Software/src/label_printer/: LabelPrinter.cpp  LabelPrinter.h
HIMS-Software/src/platform/: DigiKeyApi.h  HttpServer.cpp  HttpServer.h  MdnsService.h
HIMS-Software/src/ui/pages/: DashboardPage.cpp  HimsScanSetupPage.cpp
HIMS-Software/src/ui/shared/: AppUiShared.h
HIMS-Software/tests/: hims_tests.cpp
src/: App.h  app.cpp
src/app/: AppActions.cpp  AppBootstrap.cpp
src/core/: HimsScanProtocol.cpp  HimsScanProtocol.h  Inventory.cpp  Inventory.h  InventoryHelpers.cpp  InventoryQuery.cpp  InventoryScan.cpp  InventorySqlite.cpp  InventorySqlite.h
src/import/: DigiKeyCsvImport.cpp  DigiKeyCsvImport.h
src/label_printer/: LabelPrinter.cpp  LabelPrinter.h
src/platform/: Console.cpp  Console.h  DigiKeyApi.cpp  DigiKeyApi.h  HttpServer.cpp  HttpServer.h  MdnsService.cpp
src/platform/web/: scanner.html
src/ui/pages/: DashboardPage.cpp  DetailPage.cpp  HimsScanSetupPage.cpp  ImportCsvPage.cpp  PrinterSetupPage.cpp  StockPage.cpp
src/ui/shared/: AppUiShared.cpp  AppUiShared.h
tests/: hims_tests.cpp
